--- a/_templates/default.html
+++ b/_templates/default.html
@@ -16,6 +16,7 @@
                 </div>
                 <div id="navigation">
                     <a href="/resume.pdf">Résumé</a>
+                    <a href="/notes.html">Notes</a>
                     <a href="/archive.html">Archive</a>
                     <a href="https://twitter.com/mrordinaire">Twitter</a>
                     <a href="https://github.com/mrordinaire">GitHub</a>
