--- a/_templates/default.html
+++ b/_templates/default.html
@@ -5,7 +5,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>$title$ - MrOrdinaire</title>
-        <link rel="stylesheet" type="text/css" href="/css/default.css" />
+        <link rel="stylesheet" type="text/css" href="/css/site.css" />
     </head>
     <body>
         <div id="header-strip">
