--- a/_templates/default.html
+++ b/_templates/default.html
@@ -17,7 +17,7 @@
                 <div id="navigation">
                     <a href="/resume.pdf">Résumé</a>
                     <a href="/notes.html">Notes</a>
-                    <a href="/archive.html">Archive</a>
+                    <a href="/posts/">Posts</a>
                     <a href="https://twitter.com/mrordinaire">Twitter</a>
                     <a href="https://github.com/mrordinaire">GitHub</a>
                 </div>
