--- a/_templates/default.html
+++ b/_templates/default.html
@@ -11,7 +11,7 @@
         <div id="header-strip">
             <div id="header">
                 <div id="logo">
-                    <a href="/index.html">MrOrdinaire</a>
+                    <a href="/">MrOrdinaire</a>
                     <span>Programming and other stuff</span>
                 </div>
                 <div id="navigation">
