--- a/_templates/note-list.html
+++ b/_templates/note-list.html
@@ -1,7 +1,7 @@
-<h2>Courses</h2>
+<h2>Cheat Sheets</h2>
 
 <ul>
-$for(courses)$
+$for(cheatSheets)$
   <li><a href="$url$">$title$</a></li>
 $endfor$
 </ul>
