added cheat sheet pdfs

--- a/_templates/note-list.html
+++ b/_templates/note-list.html
@@ -2,6 +2,6 @@
 
 <ul>
 $for(cheatSheets)$
-  <li><a href="$url$">$title$</a></li>
+  <li><a href="$url$">$title$</a> (<a href="$pdfUrl$">PDF</a>)</li>
 $endfor$
 </ul>
