--- a/_templates/default.html
+++ b/_templates/default.html
@@ -7,6 +7,7 @@
         <title>$title$ - MrOrdinaire</title>
         <link rel="stylesheet" type="text/css" href="/css/site.css" />
         <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+        <script src='//minhdo.disqus.com/embed.js' async></script>
     </head>
     <body>
         <div id="header-strip">
