added way to split course into multiple posts

--- a/_templates/default.html
+++ b/_templates/default.html
@@ -29,6 +29,9 @@
         <div id="container">
             <div id="content">
                 <h1>$title$</h1>
+                $if(subtitle)$
+                <p id="subtitle">$subtitle$</p>
+                $endif$
 
                 $body$
             </div>
