--- a/_templates/note-list.html
+++ b/_templates/note-list.html
@@ -1,9 +1,12 @@
 <h2>Courses</h2>
 
 <ul>
-$for(courses)$
-  <li><a href="$url$">$title$</a></li>
-$endfor$
+  <li>
+    Real Analysis:
+    $for(realAnalysisCourse)$
+      <a href="$url$">$subtitle$</a>
+    $endfor$
+  </li>
 </ul>
 
 <h2>Cheat Sheets</h2>
