fixed course listing

--- a/_templates/note-list.html
+++ b/_templates/note-list.html
@@ -1,12 +1,9 @@
 <h2>Courses</h2>
 
 <ul>
-  <li>
-    Real Analysis:
-    $for(realAnalysisCourse)$
-      <a href="$url$">$subtitle$</a>
-    $endfor$
-  </li>
+$for(courses)$
+  <li><a href="$url$">$title$</a></li>
+$endfor$
 </ul>
 
 <h2>Cheat Sheets</h2>
