--- a/_templates/default.html
+++ b/_templates/default.html
@@ -28,10 +28,12 @@
 
         <div id="container">
             <div id="content">
-                <h1>$title$</h1>
-                $if(subtitle)$
-                <p id="subtitle">$subtitle$</p>
-                $endif$
+                <header>
+                    <h1>$title$</h1>
+                    $if(subtitle)$
+                    <p id="subtitle">$subtitle$</p>
+                    $endif$
+                </header>
 
                 $body$
             </div>
