--- a/_templates/default.html
+++ b/_templates/default.html
@@ -3,9 +3,12 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
+        <meta charset="utf-8"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>$title$ - MrOrdinaire</title>
-        <link rel="stylesheet" type="text/css" href="/css/site.css" />
+        <title>$title$ - Minh Do</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/css/site.css" type="text/css" />
+        <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
         <script src='//minhdo.disqus.com/embed.js' async></script>
     </head>
@@ -13,8 +16,7 @@
         <div id="header-strip">
             <div id="header">
                 <div id="logo">
-                    <a href="/">MrOrdinaire</a>
-                    <span>Programming and other stuff</span>
+                    <a href="/">Minh Do</a>
                 </div>
                 <div id="navigation">
                     <a href="/resume.pdf">Résumé</a>
