--- a/_templates/default.html
+++ b/_templates/default.html
@@ -21,7 +21,7 @@
                 <a href="/resume.pdf">Résumé</a>
                 <a href="/posts/">Posts</a>
                 <a href="/notes/">Notes</a>
-                <a href="https://github.com/mrordinaire">Code</a>
+                <a href="https://github.com/minhnhdo">Code</a>
             </div>
         </header>
 
